# nobodd

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: Makefile  api-config.rst  api-disk.rst  api-fat.rst  api-fs.rst  api-gpt.rst  api-locks.rst  api-mbr.rst  api-netascii.rst  api-path.rst  api-prep.rst  api-server.rst  api-sh.rst  api-systemd.rst  api-tftpd.rst  api-tools.rst  api-transfer.rst  api.rst  api_config.rst  api_disk.rst  api_fat.rst  api_fs.rst  api_gpt.rst  api_locks.rst  api_main.rst  api_mbr.rst  api_netascii.rst  api_path.rst  api_prep.rst  api_server.rst  api_sh.rst  api_systemd.rst  api_tftp.rst  api_tftpd.rst  api_tools.rst  api_transfer.rst  changelog.rst  cli-prep.rst  cli-server.rst  cli-sh.rst  (+20 more)
docs/images/: tftp-basic.mscgen
nobodd/: config.py  default.conf  disk.py  fat.py  fs.py  gpt.py  lang.py  locks.py  main.py  mbr.py  netascii.py  path.py  prep.py  server.py  sh.py  systemd.py  tftp.py  tftpd.py  tools.py  transfer.py
nobody/: config.py  default.conf  disk.py  fat.py  fs.py  gpt.py  main.py  mbr.py  netascii.py  path.py  tftp.py  tftpd.py  tools.py
po/: en_GB.po  nobodd.pot
scripts/: copyrights  previewer
systemd/: README.rst  nobodd-tftpd.service  nobodd-tftpd.socket  nobodd.conf
tests/: conftest.py  test_config.py  test_disk.py  test_fat.py  test_fs.py  test_gpt.py  test_locks.py  test_mbr.py  test_netascii.py  test_path.py  test_prep.py  test_server.py  test_sh.py  test_systemd.py  test_tftp.py  test_tftpd.py  test_tools.py  test_transfer.py
