# coding: utf-8
[metadata]
name = nobody
version = 0.1
description = A simple TFTP boot server for the Raspberry Pi
long_description = file: README.rst
author = Dave Jones
author_email = dave.jones@canonical.com
project_urls =
    Documentation = https://nobody.readthedocs.io/
    Source Code = https://github.com/waveform80/nobody
    Issue Tracker = https://github.com/waveform80/nobody/issues
keywords = raspberry pi boot nbd tftp
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Boot

[options]
packages = find:
python_requires = >=3.7
install_requires =
    setuptools
    importlib_resources~=1.3;python_version<'3.9'
    importlib_metadata~=1.4;python_version<'3.8'

[options.package_data]
nobody =
    *.conf

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    nobody = nobody.main:main

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = tests

[coverage:run]
source = nobody
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False

[copyrights:settings]
include =
  **/*.py
  **/*.rst
exclude =
  docs/examples/*.py
  docs/license.rst
license = LICENSE.txt
preamble =
  nobody: a boot configuration tool for the Raspberry Pi
strip-preamble = false

[previewer:settings]
command = make -C docs html
html = build/html
watch =
  nobody/*.py
  docs/*.rst
